<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/welcome"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/whereToNextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/where_to_next"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

    <EditText
        android:id="@+id/fromEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_from_edit_text"
        android:drawableStart="@drawable/ic_from"
        android:drawablePadding="10dp"
        android:hint="@string/from_destination"
        android:lines="2"
        android:paddingHorizontal="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/whereToNextTextView"
        tools:text="Nur-Sultan (NQZ), Kabanbay batyr 53" />

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_to_edit_text"
        android:drawableStart="@drawable/ic_to"
        android:drawablePadding="10dp"
        android:hint="@string/to_destination"
        android:lines="2"
        android:paddingHorizontal="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/fromEditText"
        tools:text="Istanbul, IST" />

    <ImageView
        android:id="@+id/changeDatesImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_arrows"
        app:layout_constraintBottom_toBottomOf="@id/toEditText"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/fromEditText" />

    <LinearLayout
        android:id="@+id/datesLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/toEditText">

        <TextView
            android:id="@+id/flightDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_start_horizontal_text"
            android:drawablePadding="10dp"
            android:hint="@string/flight_date"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_flight_date" />

        <TextView
            android:id="@+id/returnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_end_horizontal_text"
            android:drawablePadding="10dp"
            android:hint="@string/return_date"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_flight_date" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/flightDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/datesLayout">

        <TextView
            android:id="@+id/ageCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_start_horizontal_text"
            android:drawablePadding="10dp"
            android:hint="@string/age"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_person" />

        <TextView
            android:id="@+id/classCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_middle_horizontal_text"
            android:hint="@string/status"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/baggageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_end_horizontal_text"
            android:hint="@string/baggage"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/searchFlightsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_button"
        android:lines="2"
        android:text="@string/search_flights"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/flightDetailLayout" />

    <TextView
        android:id="@+id/similarFlightsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/similar_flights"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/searchFlightsButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/similarFlightsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/similarFlightsTextView"
        tools:listitem="@layout/item_similar_flights" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>